--- a/Homework/Week_3/styles.css
+++ b/Homework/Week_3/styles.css
@@ -3,7 +3,7 @@ Name: Xandra Vos
 Studentnumber: 10731148
 
 Dataprocessing - Week 3
-Scripts to draw a graph in a local host.
+CSS file for style in HTML file.
 */
 
 p {
